@@ -3,8 +3,8 @@
 
 	<data>
 		<key>content</key>
-		<version>5.0.11</version>
-		<lastMod>2012-11-22</lastMod>
+		<version>5.0.12</version>
+		<lastMod>2012-11-30</lastMod>
 
 		<name><![CDATA[Contenu]]></name>
 		<description><![CDATA[Gérer les pages de votre site internet, les catégories.]]></description>
