@@ -3,8 +3,8 @@
 
 	<data>
 		<key>core</key>
-		<version>5.0.5</version>
-		<lastMod>2012-11-29</lastMod>
+		<version>5.0.6</version>
+		<lastMod>2012-11-30</lastMod>
 
 		<name><![CDATA[Core]]></name>
 		<description><![CDATA[]]></description>
