@@ -24,7 +24,8 @@
 		/*$e['config']['installed'] == 'YES' &&*/ 
 		//if($app->userCan($e['key'].'.index') && $e['menu'] == 'YES' && ($e['config']['enabled'] == 'YES') OR ($e['key'] == 'user')){
 		//if($app->userCan($e['key'].'.index') && $e['menu'] == 'YES' && ($e['config']['enabled'] == 'YES') OR ($e['key'] == 'user')){
-		if($app->userCan($e['key'].'.index') && $e['menu'] == 'YES' && ($e['config']['enabled'] == 'YES')){
+        //$app->pre($e);
+		if(($app->userCan($e['key'].'.index') && $e['menu'] == 'YES') && ($e['config']['enabled'] == 'YES' || $e['key'] == 'user')){
 
 			$class = (is_array($e['dependencies']) && sizeof($e['dependencies']) > 0)
 				? '/('.implode('|', array_merge(array($e['key']), $e['dependencies'])).'){1,}/'
