@@ -3,8 +3,8 @@
 
 	<data>
 		<key>user</key>
-		<version>5.0.8</version>
-		<lastMod>2012-11-16</lastMod>
+		<version>5.0.9</version>
+		<lastMod>2012-11-30</lastMod>
 
 		<name><![CDATA[Utilisateur]]></name>
 		<description><![CDATA[Gérer votre communauté de membres]]></description>
